# CopySleuth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
algo_service/: README.md  REQUESTS.md  app.py  config.py  requests_client.py  serializers.py  workers.py
algo_service/routes/: detect.py  health.py  tasks.py
algo_service/services/: image_loader.py
backend/: README.md  requirements.txt
backend/app/: main.py  schemas.py
backend/app/api/: routes.py  utils.py
backend/app/core/: cache.py  config.py  cpu_lock.py  db.py  gpu_lock.py  ocr_store.py  paths.py  perf.py  tasks.py
backend/app/domain/: results.py
backend/app/pipelines/: detection.py  keyframe_extract.py  video_detection.py
backend/app/services/: algorithm.py  algorithm_api.py  local_algorithm.py  media_client.py  paddle_ocr_service.py  roma_service.py  (+3 more)
envs/: pic_cmp.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
media_service/: README.md  __init__.py  app.py  run.sh
paddle-ocr/: README.md  requirements.txt  run_ocr.py  run_server.sh  run_video_demo.sh  video_ocr_from_excel.py  video_ocr_pipeline.py
paddle-ocr/scripts/: download_models.sh
paddle-ocr/server/: api.py  jobs.py  ocr_engine.py  schemas.py
scripts/: check_health.sh  fetch_checkpoints.sh  fetch_deps.sh  run_algo.sh  run_all.sh  setup.sh  stop_all.sh  test_image.sh  test_video.sh  versions.env
tests/: conftest.py  test_detect.py  test_health.py  test_image_loader.py  test_requests_client.py  test_serializers.py  test_tasks.py
